--- a/templates/partials/_card-provider.html.twig
+++ b/templates/partials/_card-provider.html.twig
@@ -21,9 +21,12 @@
             {{ provider.users.first }}
         </p>
 
+        {# <p>
+            {{ provider.promotion.first.service }}
+        </p> #}
         <button class="provider-button">
             <a href="#">Voir le prolfil</a>
         </button>
     </div>
-
+{# {{ dump(provider) }} #}
 {% endfor %}
