--- a/sass/pages/_provider.scss
+++ b/sass/pages/_provider.scss
@@ -9,6 +9,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: 3rem;
+        min-height: 634px;
         
         @media only screen and (max-width: 1400px) {
             max-width: 992px;
