--- a/sass/partials/_card-provider.scss
+++ b/sass/partials/_card-provider.scss
@@ -1,5 +1,6 @@
 .card-provider {
     flex: 0 1 225px;
+    height: 302px;
     padding: 2rem;
     text-align: center;
     border-radius: 10px;
@@ -39,6 +40,7 @@
         margin-bottom: 2rem;
     }
     .provider-button a {
+        display: block;
         background: rgb(207,196,255);
         background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
         border-radius: 10px;
