--- a/templates/providers/provider.html.twig
+++ b/templates/providers/provider.html.twig
@@ -2,8 +2,17 @@
 
 {% block title %}Hello ProvidersController!{% endblock %}
 
+{% block javascripts %}
+    <script src="{{ asset('js/ajax_adresse.js') }}" defer></script>
+    <script src="{{ asset('js/ajax_search-bar.js') }}" defer></script>
+{% endblock %}
+
 {% block body %}
 <main class="list-providers">
+
+    <section class="search-bar">
+        {% include "partials/_search-bar.html.twig" %}
+    </section>
 
     <section class="list-providers__container">
         {% include "partials/_card-provider.html.twig" %}
