--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -208,7 +208,7 @@
 
     &__container {
         max-width: 1440px;
-        width: calc(100% - 15rem);
+        width: calc(100% - 8rem);
         margin: 0 auto;
     }
 
@@ -238,7 +238,8 @@
     }
     &__text {
         margin-bottom: 1rem;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
+        text-align: justify;
         color: #9B99A3;
     }
 
