--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -20,10 +20,12 @@
             {{ form_widget(utilisateurForm.firstName, {'attr': {'placeholder': 'Entrez votre nom'}}) }}
             {{ form_widget(utilisateurForm.lastName, {'attr': {'placeholder': 'Entrez votre prénom'}}) }}
             {{ form_widget(registrationForm.email, {'attr': {'placeholder': 'Entrez votre email'}}) }}
+            {{ form_errors(registrationForm.plainPassword) }}
+
             {{ form_widget(registrationForm.plainPassword, {'attr': {'placeholder': 'Mot de passe'}}) }}
             {{ form_row(registrationForm.agreeTerms, {'label': 'J’accepte les termes d’utilisation', 'attr': {'class': 'agreeTerms'}, 'row_attr': {'class': 'my-agreeTerms'}}) }}
             {{ form_widget(utilisateurForm._token) }}
-            <button>S'inscrire</button>
+            {{ form_widget(registrationForm.submit) }}
         </form>
     </div>
 </div>
