Le point formulaire d'inscription terminer.

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,6 +1,7 @@
-@use 'aboutpage';
+@use 'home';
+@use 'service';
+@use 'provider';
+@use 'about_us';
+@use 'newsletter';
 @use 'dashboard';
 @use 'parametre';
-@use 'service';
-@use 'homepage';
-@use 'provider';
