--- a/templates/partials/_card-provider-featured.html.twig
+++ b/templates/partials/_card-provider-featured.html.twig
@@ -10,7 +10,9 @@
                 {{ provider }}
             </p>
             <p class="provider-featured-service">
-                {{ provider.promotion.first.service }}
+                {% if provider.promotion.first.service is defined %}
+                    {{ provider.promotion.first.service }}
+                {% endif %}
             </p>
             <div class="provider-featured-image">
                 {% if name_image is defined %}
