--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -19,11 +19,11 @@
             </div>
             <div class="footer__container--about">
                 <h2>à propos de Workspace</h2>
-                <a href="#">Notre vision</a>
+                <a href="{{ path('app_about_us') }}">Notre vision</a>
                 <a href="#">Devenir prestataire</a>
                 <a href="#">Devenir menbre</a>
                 <a href="#">Nous contactez</a>
-                <a href="#">Newsletter</a>
+                <a href="{{ path('app_newsletter') }}">Newsletter</a>
             </div>
         </div>
         <div class="footer__container--newsletter">
