--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,14 +17,19 @@
             {% endif %}
         </div>
         <form action="{{ path('app_register', {status: status}) }}" method="post" class="register__form">
+            {{ form_errors(registrationForm) }}
+            {{ form_errors(utilisateurForm) }}
             {{ form_widget(utilisateurForm.firstName, {'attr': {'placeholder': 'Entrez votre nom'}}) }}
+            {{ form_errors(utilisateurForm.firstName) }}
             {{ form_widget(utilisateurForm.lastName, {'attr': {'placeholder': 'Entrez votre prénom'}}) }}
+            {{ form_errors(utilisateurForm.lastName) }}
             {{ form_widget(registrationForm.email, {'attr': {'placeholder': 'Entrez votre email'}}) }}
-            {{ form_errors(registrationForm.plainPassword) }}
-
+            {{ form_errors(registrationForm.email) }}
             {{ form_widget(registrationForm.plainPassword, {'attr': {'placeholder': 'Mot de passe'}}) }}
+            {{ form_errors(registrationForm.plainPassword) }}
             {{ form_row(registrationForm.agreeTerms, {'label': 'J’accepte les termes d’utilisation', 'attr': {'class': 'agreeTerms'}, 'row_attr': {'class': 'my-agreeTerms'}}) }}
             {{ form_widget(utilisateurForm._token) }}
+            {{ form_widget(registrationForm._token) }}
             {{ form_widget(registrationForm.submit) }}
         </form>
     </div>
