Tout est réglé : description du service, barre de recherche, fiche signalétique du prestataire et catégories de services.

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,7 +1,9 @@
 @use 'home';
 @use 'service';
+@use 'service-description';
 @use 'provider';
+@use 'provider-profile';
 @use 'about_us';
 @use 'newsletter';
+@use 'settings';
 @use 'dashboard';
-@use 'parametre';
