--- a/sass/partials/_card-provider.scss
+++ b/sass/partials/_card-provider.scss
@@ -39,6 +39,9 @@
     .provider-mail {
         margin-bottom: 2rem;
     }
+    .provider-button {
+        background-color: inherit;
+    }
     .provider-button a {
         display: block;
         background: rgb(207,196,255);
