--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -14,7 +14,8 @@
                 <a href="{{ path('app_home') }}">Accueil</a>
                 <a href="{{ path('app_providers') }}">Prestataires</a>
                 <a href="{{ path('app_services_defaut') }}">Services</a>
-                <a href="#">Newsletter</a>
+                <a href="{{ path('app_about_us') }}">About us</a>
+                <a href="{{ path('app_newsletter') }}">Newsletter</a>
                 <a href="#">Contact</a>
             </nav>
         </div>
