--- a/templates/svg/facebook.html.twig
+++ b/templates/svg/facebook.html.twig
@@ -1,3 +1,19 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
-  <path fill="currentColor" d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24">
+  <defs>
+    <linearGradient id="linear-gradient" y1="0.085" x2="0.928" y2="0.895" gradientUnits="objectBoundingBox">
+      <stop offset="0" stop-color="#ccc5ff"/>
+      <stop offset="1" stop-color="#a5d2f6"/>
+    </linearGradient>
+    <clipPath id="clip-path">
+      <rect id="Rectangle_308" data-name="Rectangle 308" width="16" height="16" fill="#fff"/>
+    </clipPath>
+  </defs>
+  <g id="Groupe_875" data-name="Groupe 875" transform="translate(-23 4142)">
+    <rect id="Rectangle_400" data-name="Rectangle 400" width="24" height="24" rx="10" transform="translate(23 -4142)" fill="url(#linear-gradient)"/>
+    <g id="Groupe_265" data-name="Groupe 265" transform="translate(27 -4138)">
+      <g id="Groupe_264" data-name="Groupe 264" transform="translate(0 0)" clip-path="url(#clip-path)">
+        <path id="Tracé_107" data-name="Tracé 107" d="M8,0a7.939,7.939,0,0,1,2.125.283,7.537,7.537,0,0,1,1.907.818,8.767,8.767,0,0,1,1.617,1.257,7.669,7.669,0,0,1,1.258,1.627A8.14,8.14,0,0,1,16,8.047a8.042,8.042,0,0,1-.883,3.686,7.78,7.78,0,0,1-1.031,1.541,8.455,8.455,0,0,1-1.359,1.265,7.579,7.579,0,0,1-1.625.927A8.706,8.706,0,0,1,9.25,16V10.373h1.867l.352-2.326H9.25V6.538a1.407,1.407,0,0,1,.141-.684.93.93,0,0,1,.375-.377,1.54,1.54,0,0,1,.531-.165,4.621,4.621,0,0,1,.617-.04h.328c.11,0,.217,0,.321.008V3.3q-.437-.078-.891-.118t-.9-.039a3.526,3.526,0,0,0-1.289.22,2.552,2.552,0,0,0-.945.629,2.772,2.772,0,0,0-.586.983,3.865,3.865,0,0,0-.2,1.3V8.047H4.719v2.326H6.75V16A7.513,7.513,0,0,1,4.9,15.474a8.278,8.278,0,0,1-1.625-.927,7.745,7.745,0,0,1-1.352-1.265A8.337,8.337,0,0,1,.891,11.733a7.927,7.927,0,0,1-.656-1.76A8.351,8.351,0,0,1,0,8.047,8.075,8.075,0,0,1,.281,5.91a7.646,7.646,0,0,1,.813-1.918,8.83,8.83,0,0,1,1.25-1.627A7.618,7.618,0,0,1,3.961,1.1,8.013,8.013,0,0,1,8,0" transform="translate(0 0)" fill="#fff"/>
+      </g>
+    </g>
+  </g>
 </svg>
