--- a/sass/pages/_dashboard.scss
+++ b/sass/pages/_dashboard.scss
@@ -1,366 +1,171 @@
 .dashboard {
-    background-color: #fcf7f7;
+    background-color: #F3F2FF;
+    font-size: 1.4rem;
 
-    .dashboard__container {
+    &__container {
         max-width: 1440px;
-        width: calc(100% - 15rem);
-        margin: auto;
-    }
-
-    .dashboard__header {
-        padding: 3rem 0; 
-    }
-
-    .dashboard__main {
-        display: flex;
-        gap: 3rem;
-    }
-
-    .dashboard__section {
-        max-width: 1154px;
-        width: 100%;
-    }
-}
-
-.dashboard__avatar {
-    > div {
-        width: 256px;
-
-        > div {
-            height: 10rem;
-            width: 10rem;
-            border: solid .5rem white;
-            border-radius: 50%;
-            background-color: rgb(105, 210, 231);
-            box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-            // box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
-            overflow: hidden;
-            margin: auto;
-
-            &:hover {
-                box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-                cursor: pointer;
-            }
-        }
-    }
-
-}
-
-.dashboard__menu {
-    width: 256px;
-
-    h3 {
-        margin: 0 1.6rem 1.6rem;
-    }
-    > div {
-        border-radius: 20px;
-        background-color: white;
-        padding: 1.6rem;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 99px;
-
-        a {
-            display: flex;
-            gap: 1rem;
-            align-items: center;
-            font-size: 1.6rem;
-            padding: .7rem;
-            
-            &:hover {
-                background-color: #F3F5F8;
-                border-radius: 1rem;
-            }
-        }
-        span {
-            flex: 1;
-        }
-        button {
-            display: flex;
-            align-items: center;
-            border-radius: .6rem;
-            background: rgb(207,196,255);
-            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            padding: .5rem;
-        }
-    }
-}
-
-.dashboard__table {
-
-    h3 { 
-        margin: 0 1.6rem 1.6rem;
-    }
-    
-    > div {
-        border-radius: 20px;
-        background-color: white;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 99px;
-        padding: 1.6rem;
-
-        > div {
-            display: flex;
-            gap: 1.6rem;
-            margin-bottom: 3rem;
-        }
-
-        > div a {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            font-size: 1.6rem;
-            border-radius: 1rem;
-            background: rgb(207,196,255);
-            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            padding: 1.25rem 4.5rem;
-        }
-        form {
-            border: solid 1px;
-            display: inline-flex;
-            flex: 1;
-            color: #c76868;
-            border-color: #c76868;
-            cursor: pointer;
-        }
-    }
-
-    table {
-        width: 100%;
-    }
-    thead {
-        tr:first-of-type {
-            th {
-                padding-bottom: 3rem;
-                text-align: left;
-            }
-            
-            ul {
-                display: none;
-            }
-        }
-        tr:nth-of-type(2) {
-            th {
-                font-size: 1.4rem;
-                background-color: #F3F5F8;
-                text-align: left;
-                color: #886464;
-                font-weight: 600;
-                padding: 1.6rem 1.6rem 1.1rem;
-            }
-            th:first-child {
-                // max-width: 200px;
-                width: auto;
-                border-top-left-radius: 10px;
-                border-bottom-left-radius: 10px;
-                // padding-left: 1.6rem;
-            }
-            th:nth-of-type(3) {
-                // width: 100px;
-            }
-            th:nth-of-type(4) {
-                // width: 70px;
-            }
-            th:nth-last-of-type(2) {
-                text-align: center;
-                // width: 100px;
-            }
-            th:last-child {
-                border-top-right-radius: 10px;
-                border-bottom-right-radius: 10px;
-            }
-        }
-        tr:last-of-type {
-            height: 1.6rem;
-        }
-    }
-    tbody {
-        
-        tr:hover {
-            background-color: #F3F5F8;
-        }
-        td {
-            font-size: 1.4rem;
-            font-weight: 400;
-            padding: 1.6rem 1.6rem 1.1rem;
-            color: #647688;
-            white-space: nowrap;
-        }
-        td:first-child {
-            border-top-left-radius: 10px;
-            border-bottom-left-radius: 10px;
-            // padding-left: 1.6rem;
-            // width: auto;
-            // border: solid;
-        }
-        td:nth-of-type(5) {
-            display: flex;
-            justify-content: center;
-        }
-
-        td:last-child {
-            border-top-right-radius: 10px;
-            border-bottom-right-radius: 10px;
-            
-            a {
-                border: solid 1px;
-                display: inline-flex;
-                flex: 1;
-                color: #68c770;
-                border-color: #68c770;
-            }
-            a:first-of-type {
-                color: #689BC7;
-                border-color: #689BC7;
-            }
-
-            svg {
-                height: 20px;
-                width: 20px;
-            }
-        }
-    }
-}
-
-.dashboard__form {
-    form {
-        border-radius: 20px;
-        background-color: white;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 99px;
-        padding: 1.6rem;
+        width: calc(100% - 8rem);
         display: flex;
         flex-flow: column;
-        gap: 1.6rem;
+        flex-wrap: nowrap;
+        margin: 0 auto;
     }
+    &__profile-section {
+        margin: 3rem 0;
 
-    h3 { 
-        margin: 0 1.6rem 1.6rem;
-    }
+        .dashboard__profile-container {
+            width: 25rem;
 
-    input[type=text] {
-        border: solid 1px #DBE2E8;
-        flex: 1;
-        border-radius: 1rem;
-        padding: 1.25rem 1.6rem;
-        background-color: #F3F5F8;
+            div {
+                height: 10rem;
+                width: 10rem;
+                overflow: hidden;
+                border-radius: 50%;
+                border: solid 4px white;
+                margin: 0 auto;
+                box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+            }
+        }
     }
-
-    textarea {
-        border: solid 1px #DBE2E8;
-        flex: 1;
-        border-radius: 1rem;
-        padding: 1.25rem 1.6rem;
-        background-color: #F3F5F8;
-    }
-    
-    .dashboard-input {
+    &__content-section {
         display: flex;
-        gap: 1.6rem;
+        gap: 3rem;
+        flex-wrap: nowrap;
 
-        > select {
-            border: solid 1px #DBE2E8;
-            flex: 1;
-            border-radius: 1rem;
-            padding: 1.25rem 1.6rem;
+        .dashboard__menu {
+            flex: 0 1 25rem;
+
+            .dashboard__menu-title {
+                font-size: 2rem;
+                color: #647688;
+                padding-left: 2rem;
+                margin-bottom: 2rem;
+            }
+
+            .dashboard__menu-items {
+                display: flex;
+                flex-flow: column;
+                gap: .5rem;
+                background-color: white;
+                box-shadow: #787E83 0px 10px 99px;
+                border-radius: 1rem;
+                padding: 2rem;
+
+                a {
+                    display: flex;
+                    align-items: center;
+                    border-radius: 1rem;
+                    padding-left: 1rem;
+                }
+                a:hover {
+                    background-color: #F3F5F8;
+                    color: #5D4E91;
+                }
+                span {
+                    flex: auto;
+                }
+            }
         }
+        .dashboard__main-content {
+            flex: auto;
 
-        div {
-            border: solid 1px #DBE2E8;
-            border-radius: 1rem;
-            padding: 1.25rem 1.6rem;
+            .dashboard__content-title {
+                font-size: 2rem;
+                color: #647688;
+                padding-left: 2rem;
+                margin-bottom: 2rem;
+            }
+            .dashboard__content-items,
+            .dashboard__form {
+                background-color: white;
+                box-shadow: #787E83 0px 10px 99px;
+                border-radius: 1rem;
+                padding: 2rem;
+            }
+            .dashboard__content-button button {
+                background-color: inherit;
+                margin-bottom: 2rem;
+            }
+            .dashboard__content-button a {
+                display: flex;
+                align-items: center;
+                place-content: center;
+                width: 20rem;
+                padding: .5rem;
+                border-radius: 1rem;
+                background: rgb(207,196,255);
+                background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+            }
+            table {
+                width: 100%;
+                border-collapse: separate;
+                border-spacing: 0 1rem;
+            }
+            thead {
+                tr:first-of-type {
+                    
+                    color: #647688;
+                    font-weight: 500;
+                    
+                }
+                tr:first-of-type th {
+                    padding: 1.6rem 0 1.6rem 2rem;
+                    background-color: #F3F5F8;
+                    text-align: left;
+                }
+                tr:first-of-type th:first-of-type {
+                    border-top-left-radius: 1rem;
+                    border-bottom-left-radius: 1rem;
+                }
+                tr:first-of-type th:last-of-type {
+                    border-top-right-radius: 1rem;
+                    border-bottom-right-radius: 1rem;
+                }
+            }
+            tbody {
+                tr:hover td {
+                    background-color: #F3F5F8;
+                }
+                tr:hover td:first-of-type {
+                    border-top-left-radius: 1rem;
+                    border-bottom-left-radius: 1rem;
+                }
+                tr:hover td:last-of-type {
+                    border-top-right-radius: 1rem;
+                    border-bottom-right-radius: 1rem;
+                }
+                td {
+                    padding: .5rem 0 .5rem 2rem;
+                }
+            }
+
+            .dashboard__form {
+                display: flex;
+                flex-flow: column;
+                gap: 1rem;
+                .dashboard__form-group {
+                    display: flex;
+                    gap: 1rem;
+
+                    select {
+                        background-color: white;
+                        border: solid 1px #DBE2E8;
+                        border-radius: .5rem;
+                        padding: .5rem 1rem;
+                    }
+                    #promotions_form_service {
+                        flex: auto;
+                    }
+                    .input-titre,
+                    .input-textarea {
+                        flex: auto;
+                        padding: .5rem 1rem;
+                        background-color: white;
+                        border: solid 1px #DBE2E8;
+                        border-radius: .5rem;
+                    }
+                }
+            }
         }
-    }
-
-    div select {
-        border: none;
-    }
-
-    .dashboard-button {
-        display: flex;
-        gap: 1.6rem;
-
-        button {
-            border-radius: 1rem;
-            background: rgb(207,196,255);
-            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            padding: 1rem 4.6rem .6rem;
-            cursor: pointer;
-        }
-        .file-input {
-            position: relative;
-            overflow: hidden;
-            display: inline-block;
-            margin-left: auto;
-        }
-
-        .file-input input[type="file"] {
-            position: absolute;
-            font-size: 100px;
-            height: 100%;
-            width: 100%;
-            top: 0;
-            left: 0;
-            opacity: 0;
-        }
-
-        .file-input label {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            font-size: 1.4rem;
-            text-align: center;
-            border: solid 1px #DBE2E8;
-            border-radius: 1rem;
-            cursor: pointer;
-            padding: 1rem 2.5rem .6rem;
-        }
-    }
-}
-
-.dashboard__show {
-    h3 {
-        margin: 0 1.6rem 1.6rem;
-    }
-    article {
-        position: relative;
-        border-radius: 20px;
-        background-color: white;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 99px;
-        padding: 1.6rem;
-        display: flex;
-        justify-content: center;
-    }
-    div {
-        border: solid 1px;
-        width: 300px;
-        border-radius: 20px;
-        padding: 1.6rem;
-    }
-    p {
-        margin: 1rem 0;
-    }
-    a {
-        position: absolute;
-        left: 1.6rem;top: 1.6rem;
-        border: solid 1px;
-        border-radius: 5px;
-        height: 25px;
-        width: 25px;
-        display: inline-flex;
-        background-color: #689BC7;
-    }
-    svg {
-        height: auto;
-    }
-}
-
-.dashboard__edit {
-    a {
-        border: solid 1px;
-        border-radius: 5px;
-        height: 25px;
-        width: 25px;
-        display: inline-flex;
-        background-color: #689BC7;
-    }
-    svg {
-        height: auto;
     }
 }
