--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -129,7 +129,7 @@
         a {
             background: rgb(207,196,255);
             background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            border-radius: 10px;
+            border-radius: 1rem;
             border: solid 1px white;
             cursor: pointer;
             box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
