--- a/templates/svg/twitter.html.twig
+++ b/templates/svg/twitter.html.twig
@@ -1,3 +1,19 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256">
-  <path fill="currentColor" d="m245.66 77.66l-29.9 29.9C209.72 177.58 150.67 232 80 232c-14.52 0-26.49-2.3-35.58-6.84c-7.33-3.67-10.33-7.6-11.08-8.72a8 8 0 0 1 3.85-11.93c.26-.1 24.24-9.31 39.47-26.84a110.93 110.93 0 0 1-21.88-24.2c-12.4-18.41-26.28-50.39-22-98.18a8 8 0 0 1 13.65-4.92c.35.35 33.28 33.1 73.54 43.72V88a47.87 47.87 0 0 1 14.36-34.3A46.87 46.87 0 0 1 168.1 40a48.66 48.66 0 0 1 41.47 24H240a8 8 0 0 1 5.66 13.66Z"/>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24">
+  <defs>
+    <linearGradient id="linear-gradient" y1="0.085" x2="0.928" y2="0.895" gradientUnits="objectBoundingBox">
+      <stop offset="0" stop-color="#ccc5ff"/>
+      <stop offset="1" stop-color="#a5d2f6"/>
+    </linearGradient>
+    <clipPath id="clip-path">
+      <rect id="Rectangle_307" data-name="Rectangle 307" width="16" height="13.002" fill="#fff"/>
+    </clipPath>
+  </defs>
+  <g id="Groupe_876" data-name="Groupe 876" transform="translate(-55 4142)">
+    <rect id="Rectangle_311" data-name="Rectangle 311" width="24" height="24" rx="10" transform="translate(55 -4142)" fill="url(#linear-gradient)"/>
+    <g id="Groupe_263" data-name="Groupe 263" transform="translate(59 -4136.501)">
+      <g id="Groupe_262" data-name="Groupe 262" transform="translate(0 0)" clip-path="url(#clip-path)">
+        <path id="Tracé_106" data-name="Tracé 106" d="M16,1.53a6.553,6.553,0,0,1-1.881.528A3.291,3.291,0,0,0,15.557.237a6.627,6.627,0,0,1-2.081.8A3.23,3.23,0,0,0,11.059,0,3.277,3.277,0,0,0,7.793,3.281a3.419,3.419,0,0,0,.084.75A9.328,9.328,0,0,1,1.116.6,3.246,3.246,0,0,0,.673,2.249,3.228,3.228,0,0,0,2.134,4.972,3.244,3.244,0,0,1,.642,4.589v.023a3.284,3.284,0,0,0,2.631,3.22A3.233,3.233,0,0,1,1.8,7.886a3.273,3.273,0,0,0,3.059,2.279A6.517,6.517,0,0,1,.78,11.572,6.706,6.706,0,0,1,0,11.526,9.29,9.29,0,0,0,5.032,13a9.282,9.282,0,0,0,9.339-9.339c0-.145,0-.283-.007-.428A6.551,6.551,0,0,0,16,1.53" transform="translate(0 0)" fill="#fff"/>
+      </g>
+    </g>
+  </g>
 </svg>
